<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <group android:checkableBehavior="none">
    <item
        android:id="@+id/menu_item_section"
        android:title="@string/section"
        app:actionLayout="@layout/spinner_section" />
    <item
        android:id="@+id/menu_item_show_viral"
        android:title="@string/show_viral"
        app:actionLayout="@layout/spinner_show_viral" />

    <item
        android:id="@+id/menu_item_sort"
        android:title="@string/sort"
        app:actionLayout="@layout/spinner_sort" />
    <item
        android:id="@+id/menu_item_window"
        android:title="@string/window"
        android:visible="false"
        app:actionLayout="@layout/spinner_window" />

    <item
        android:id="@+id/menu_item_layout_style"
        android:title="@string/layout"
        app:actionLayout="@layout/spinner_layout_style" />
  </group>
</menu>
